[package]
name = "tod-web"
version = "0.1.0"
edition = "2021"

[dependencies]
# Axum and Askama
axum = "0.8.9"
askama = "0.15.6"

# Shuttle
shuttle = "0.9.0"
shuttle-runtime = "0.57.0"
shuttle-axum = "0.57.0"

tokio = {version = "1", features = ["full"]}
serde = {version = "1", features = ["derive"]}
serde_json = "1.0.149"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"]}
tower-http = { version = "0.6.8", features = ["trace"] }

[dev-dependencies]
cargo-watch = "8.5.3"
axum-test = "18.3.0"

